--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,22 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-	<link rel="stylesheet" href="%PUBLIC_URL%/main.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/normalize.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/main.css" />
 
-	<!-- GOOGLE FONTS -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap" rel="stylesheet">
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- FONT AWESOME -->
+    <script
+      src="https://kit.fontawesome.com/9942bd05a4.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>React App</title>
   </head>
